# AudioSystemBenchmarks

./: .gitattributes  LICENSE  README.md  pyproject.toml
build_figures/: figures.ipynb
data/: Fig R1.xlsx  Fig R2.xlsx  Fig R3 SB_AMP_FFTs_2022_02_01_updated.xlsx  Fig R4 Data_SB_AMP_THD_2022_01_2831.xlsx  Fig R4 Data_SB_AMP_THD_2022_02_01.xlsx  Fig R5 cal_2020_02_11.xlsx  Fig R5 sweep_02_08.xlsx  Fig R6 Latency Raw Volt.csv  Fig R6 Latency.xlsx
src/soundcard/: __init__.py
